--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,20 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+body{
+    font-family: Arial, Helvetica, sans-serif;
+    background-color: #fafafa;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.App{
+
+    width: 95vw;
+    margin: 00 auto;
+}
+
+.masonary_home_head{
+
+    font-size: 20px;
+}
+
+.css-bdcj6b-MuiButtonBase-root-MuiButton-root{
+
+    color: #000 !important;
 }
